using System;
using UnityEngine;
using UnityEngine.InputSystem;

namespace ___WorkData.Scripts.Player
{
    [RequireComponent(typeof(Rigidbody2D))]
    [RequireComponent(typeof(Animator))]
    public class PlayerController : MonoBehaviour
    {
        #region ENUMS
        public enum PlayerMovementState { Idle, Run, Jump }
        public enum PlayerActionState { Attack, Attack_Dash }
        #endregion
        
        #region ANIMATOR HASHES
        public static readonly int Hash_MovementValue = Animator.StringToHash("MovementValue");
        public static readonly int Hash_ActionID      = Animator.StringToHash("ActionID");
        public static readonly int Hash_ActionTrigger = Animator.StringToHash("ActionTrigger");
        public static readonly int Hash_Grounded      = Animator.StringToHash("Grounded");
        #endregion
        
        #region INSPECTOR VARIABLES

        [Header("Movement")]
        [SerializeField] private float walkingSpeed = 10f;
        [SerializeField] private float jumpForce = 5f;

        [Header("Combo System")]
        [SerializeField] private int clickCount = 0;
        [SerializeField] private float clickTimer = 0f;
        [SerializeField] private float doubleClickTime = 0.25f;

        [Header("Animation")]
        [SerializeField] private Animator animator;

        [Header("Ledge Grab")]
        [SerializeField] private Transform wallcheck;
        [SerializeField] private Transform groundcheck;
        [SerializeField] private LayerMask groundlayer;
        [SerializeField] private bool Grounded;

        private bool isGrabbing = false;
        private Vector2 direction;

        #endregion
        
        #region INPUT SYSTEM VARIABLES
        private InputSystem_Actions inputActions;

        private InputAction moveAction;
        private InputAction jumpAction;
        private InputAction attackAction;

        private Vector2 moveInput;
        private bool lookingToTheRight = true;
        #endregion
        
        #region CACHED COMPONENTS
        private Rigidbody2D rb;
        #endregion
        
        #region UNITY LIFECYCLE

        // –ü–†–ò–ß–ò–ù–ê:
        //   –ù–∞–ª–∞—à—Ç–æ–≤—É—î–º–æ —Å–∏—Å—Ç–µ–º—É –≤–≤–æ–¥—É —Ç–∞ –±–µ—Ä–µ–º–æ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç–∏ Unity.
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –ü—Ä–∏–≤'—è–∑—É—î–º–æ InputActions –¥–æ –ª–æ–∫–∞–ª—å–Ω–∏—Ö –∑–º—ñ–Ω–Ω–∏—Ö.
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –°–∫—Ä–∏–ø—Ç –∑–Ω–∞—î, —è–∫—ñ –∫–Ω–æ–ø–∫–∏ –≤—ñ–¥–ø–æ–≤—ñ–¥–∞—é—Ç—å –∑–∞ —Ä—É—Ö/—Å—Ç—Ä–∏–±–æ–∫/–∞—Ç–∞–∫—É.
        private void Awake()
        {
            inputActions = new InputSystem_Actions();

            moveAction = inputActions.Player.Move;
            jumpAction = inputActions.Player.Jump;
            attackAction = inputActions.Player.Attack;

            rb = GetComponent<Rigidbody2D>();
            animator = GetComponent<Animator>();
        }

        // –ü–†–ò–ß–ò–ù–ê:
        //   –ü–æ—Ç—Ä—ñ–±–Ω–æ –ø–æ—á–∞—Ç–∏ –æ—Ç—Ä–∏–º—É–≤–∞—Ç–∏ —Å–∏–≥–Ω–∞–ª–∏ –≤—ñ–¥ Input System.
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –ü—ñ–¥–ø–∏—Å—É—î–º–æ—Å—å –Ω–∞ –ø–æ–¥—ñ—ó: Move, Jump, Attack.
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –ö–æ–ª–∏ –≥—Ä–∞–≤–µ—Ü—å –Ω–∞—Ç–∏—Å–Ω–µ –∫–Ω–æ–ø–∫—É ‚Äî –≤–∏–∫–ª–∏–∫–∞—î—Ç—å—Å—è –ø–æ—Ç—Ä—ñ–±–Ω–∏–π –º–µ—Ç–æ–¥.
        private void OnEnable()
        {
            inputActions.Enable();

            moveAction.performed += Move;
            moveAction.canceled  += Move;

            jumpAction.performed += OnJump;

            attackAction.performed += Attack;
        }

        // –ü–†–ò–ß–ò–ù–ê:
        //   –£—Å—ñ —Ñ—ñ–∑–∏—á–Ω—ñ –¥—ñ—ó –º–∞—é—Ç—å –∑–∞–ø—É—Å–∫–∞—Ç–∏—Å—å —É —Å—Ç–∞–±—ñ–ª—å–Ω–æ–º—É FixedUpdate.
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –í–∏–∫–ª–∏–∫–∞—î–º–æ —Ç—Ä–∏ –æ—Å–Ω–æ–≤–Ω—ñ –ª–æ–≥—ñ—á–Ω—ñ –±–ª–æ–∫–∏.
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –ü–µ—Ä—Å–æ–Ω–∞–∂ —Ä—É—Ö–∞—î—Ç—å—Å—è, —Ä–æ–±–∏—Ç—å –∫–æ–º–±–æ, —á—ñ–ø–ª—è—î—Ç—å—Å—è –∑–∞ –∫—Ä–∞–π.
        private void FixedUpdate()
        {
            HandleMovement();
            HandleComboTimer();
            HandleLedgeGrab();
        }

        // –í–∏–º–∏–∫–∞—î–º–æ –≤—Å—ñ –ø—ñ–¥–ø–∏—Å–∫–∏, —â–æ–± —É–Ω–∏–∫–Ω—É—Ç–∏ –ø–æ–º–∏–ª–æ–∫
        private void OnDisable()
        {
            moveAction.performed -= Move;
            moveAction.canceled  -= Move;
            jumpAction.performed -= OnJump;
            attackAction.performed -= Attack;

            inputActions.Disable();
        }

        #endregion
        
        #region MOVEMENT LOGIC

        // –õ–û–ì–Ü–ö–ê –†–£–•–£
        // –ü–†–ò–ß–ò–ù–ê:
        //   –ì—Ä–∞–≤–µ—Ü—å –ø–æ–≤–∏–Ω–µ–Ω —Ä—É—Ö–∞—Ç–∏—Å—è –≤–ª—ñ–≤–æ-–≤–ø—Ä–∞–≤–æ.
        //
        // –£–ú–û–í–ê:
        //   –Ø–∫—â–æ –≤—ñ–Ω –ß–Ü–ü–õ–Ø–Ñ–¢–¨–°–Ø –∑–∞ —Å—Ç—ñ–Ω—É (isGrabbing = true),
        //   —Ä—É—Ö –ø–æ–≤–Ω—ñ—Å—Ç—é –±–ª–æ–∫—É—î—Ç—å—Å—è.
        //
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –ë–µ—Ä–µ–º–æ moveInput.x (‚Äì1 / 0 / 1),
        //   –º–Ω–æ–∂–∏–º–æ –Ω–∞ walkingSpeed,
        //   –∑–∞–¥–∞—î–º–æ Rigidbody —à–≤–∏–¥–∫—ñ—Å—Ç—å –ø–æ X.
        //
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –ì—Ä–∞–≤–µ—Ü—å —Ä—É—Ö–∞—î—Ç—å—Å—è –ø–ª–∞–≤–Ω–æ, –∞ Animator –∑–Ω–∞—î —à–≤–∏–¥–∫—ñ—Å—Ç—å.
        private void HandleMovement()
        {
            if (!isGrabbing)
            {
                rb.linearVelocity = new Vector2(moveInput.x * walkingSpeed, rb.linearVelocity.y);
            }

            animator.SetFloat(Hash_MovementValue, Mathf.Abs(rb.linearVelocity.x));
        }

        #endregion
        
        #region LEDGE GRAB LOGIC

        // –õ–û–ì–Ü–ö–ê –ó–ê–•–í–ê–¢–£ –ó–ê –ö–†–ê–ô
        // –ü–†–ò–ß–ò–ù–ê:
        //   –ö–æ–ª–∏ –ø–µ—Ä—Å–æ–Ω–∞–∂ –∫–æ–≤–∑–∞—î –≤–Ω–∏–∑ –ø–æ —Å—Ç—ñ–Ω—ñ ‚Äî –≤—ñ–Ω –º–∞—î –∑—É–ø–∏–Ω–∏—Ç–∏—Å—è –π ¬´–≤–∏—Å–Ω—É—Ç–∏¬ª.
        //
        // –£–ú–û–í–ê:
        //   ‚Äî –ù–ï —Å—Ç–æ—ó—Ç—å –Ω–∞ –∑–µ–º–ª—ñ
        //   ‚Äî –Ñ —Å—Ç—ñ–Ω–∞ –ø–µ—Ä–µ–¥ –Ω–∏–º
        //   ‚Äî –í—ñ–Ω –ø–∞–¥–∞—î (—à–≤–∏–¥–∫—ñ—Å—Ç—å –ø–æ Y < 0)
        //
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –í–∏–º–∏–∫–∞—î–º–æ –≥—Ä–∞–≤—ñ—Ç–∞—Ü—ñ—é ‚Üí –ø–µ—Ä—Å–æ–Ω–∞–∂ –Ω–µ –ø–∞–¥–∞—î.
        //   –û–±–Ω—É–ª—è—î–º–æ —à–≤–∏–¥–∫—ñ—Å—Ç—å ‚Üí –ø–µ—Ä—Å–æ–Ω–∞–∂ –≤–∏—Å–∏—Ç—å –Ω–∞ –º—ñ—Å—Ü—ñ.
        //   –í–º–∏–∫–∞—î–º–æ ActionID=20 ‚Üí –∞–Ω—ñ–º–∞—Ü—ñ—è —Ö–≤–∞—Ç—É.
        //
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –ü–µ—Ä—Å–æ–Ω–∞–∂ –∑–∞–≤–∏—Å–∞—î –Ω–∞ –∫—Ä–∞—é —ñ —á–µ–∫–∞—î –Ω–∞ –∫–æ–º–∞–Ω–¥—É ‚Üë –∞–±–æ ‚Üì.
        private void HandleLedgeGrab()
        {
            direction = lookingToTheRight ? Vector2.right : Vector2.left;

            Grounded = Physics2D.Raycast(groundcheck.position, Vector2.down, 0.2f, groundlayer);
            bool TouchingWall = Physics2D.Raycast(wallcheck.position, direction, 0.2f, groundlayer);

            // –í—Ö—ñ–¥ —É —Ö–≤–∞—Ç
            if (!Grounded && TouchingWall && rb.linearVelocity.y < 0)
            {
                rb.gravityScale = 0;
                rb.linearVelocity = Vector2.zero;
                isGrabbing = true;
            }

            // –í—ñ–¥–æ–±—Ä–∞–∂–µ–Ω–Ω—è –∞–Ω—ñ–º–∞—Ü—ñ—ó —Ö–≤–∞—Ç—É
            if (isGrabbing)
            {
                animator.SetInteger(Hash_ActionID, 20);
            }
            
            if (isGrabbing && moveInput.y > 0) // –í–∏—Ö—ñ–¥ –≤–≥–æ—Ä—É
            {
                rb.gravityScale = 5;
                isGrabbing = false;
            }
            else if (isGrabbing && moveInput.y < 0) // –í–∏—Ö—ñ–¥ –≤–Ω–∏–∑
            {
                rb.gravityScale = 5;
                isGrabbing = false;
            }
        }

        #endregion
        
        #region COMBO SYSTEM LOGIC

        // –õ–û–ì–Ü–ö–ê –ö–û–ú–ë–û-–ê–¢–ê–ö
        // –ü–†–ò–ß–ò–ù–ê:
        //   –ü–æ—Ç—Ä—ñ–±–Ω–æ –≤–∏–∫–æ–Ω–∞—Ç–∏ –¥–≤—ñ –∞—Ç–∞–∫–∏ –ø–æ—Å–ø—ñ–ª—å.
        //
        // –£–ú–û–í–ê:
        //   –ü–µ—Ä—à–∞ –∞—Ç–∞–∫–∞ –∑–∞–ø—É—Å–∫–∞—î —Ç–∞–π–º–µ—Ä.
        //   –î—Ä—É–≥–∞ –∞—Ç–∞–∫–∞ –ø–æ–≤–∏–Ω–Ω–∞ –±—É—Ç–∏ –î–û —Ç–æ–≥–æ, —è–∫ –≤—ñ–Ω –∑–∞–≤–µ—Ä—à–∏—Ç—å—Å—è.
        //
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –ó–º–µ–Ω—à—É—î–º–æ clickTimer —â–æ—Ñ—Ä–µ–π–º–∞.
        //   –Ø–∫—â–æ —á–∞—Å –∑–∞–∫—ñ–Ω—á–∏–≤—Å—è ‚Üí clickCount –æ–±–Ω—É–ª—è—î—Ç—å—Å—è.
        //
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –°–∏—Å—Ç–µ–º–∞ –≤–∏–∑–Ω–∞—á–∞—î: —Ü–µ –ø–µ—Ä—à–∏–π —É–¥–∞—Ä —á–∏ –∫–æ–º–±–æ.
        private void HandleComboTimer()
        {
            if (clickTimer > 0)
            {
                clickTimer = clickTimer - Time.deltaTime;

                // –ö–æ–ª–∏ —Ç–∞–π–º–µ—Ä –∑–∞–∫—ñ–Ω—á–∏–≤—Å—è ‚Üí –∫–æ–º–±–æ —Å–∫–∞—Å–æ–≤—É—î—Ç—å—Å—è
                if (clickTimer <= 0)
                {
                    clickCount = 0;
                }
            }
        }

        #endregion
        
        #region INPUT CALLBACKS

        // üîµ –†–£–• (Move)
        // –ü–†–ò–ß–ò–ù–ê:
        //   –ö–æ–ª–∏ –≥—Ä–∞–≤–µ—Ü—å –Ω–∞—Ç–∏—Å–∫–∞—î A/D –∞–±–æ ‚Üê/‚Üí ‚Äî –º–∏ –º–∞—î–º–æ –ø—Ä–æ—á–∏—Ç–∞—Ç–∏ —Ü–µ –∑–Ω–∞—á–µ–Ω–Ω—è.
        //
        // –£–ú–û–í–ê:
        //   ctx –º—ñ—Å—Ç–∏—Ç—å –≤–µ–∫—Ç–æ—Ä —Ä—É—Ö—É (X/Y), –∑—á–∏—Ç—É—î–º–æ —Ç—ñ–ª—å–∫–∏ X.
        //
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –û–Ω–æ–≤–ª—é—î–º–æ moveInput,
        //   –≤–∏–∑–Ω–∞—á–∞—î–º–æ, –∫—É–¥–∏ –¥–∏–≤–∏—Ç—å—Å—è –ø–µ—Ä—Å–æ–Ω–∞–∂,
        //   —Ä–æ–±–∏–º–æ –ø–æ–≤–æ—Ä–æ—Ç —Ç—Ä–∞–Ω—Å—Ñ–æ—Ä–º–∞.
        //
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –ü–µ—Ä—Å–æ–Ω–∞–∂ –¥–∏–≤–∏—Ç—å—Å—è —É –ø—Ä–∞–≤–∏–ª—å–Ω–∏–π –±—ñ–∫ –ø—ñ–¥ —á–∞—Å —Ä—É—Ö—É.
        private void Move(InputAction.CallbackContext ctx)
        {
            moveInput = ctx.ReadValue<Vector2>();

            if (moveInput.x > 0f)
            {
                lookingToTheRight = true;
            }
            else if (moveInput.x < 0f)
            {
                lookingToTheRight = false;
            }

            UpdateRotation();
        }


        // –°–¢–†–ò–ë–û–ö (Jump)
        // –ü–†–ò–ß–ò–ù–ê:
        //   –ì—Ä–∞–≤–µ—Ü—å –ø–æ–≤–∏–Ω–µ–Ω –º–∞—Ç–∏ –≤–µ—Ä—Ç–∏–∫–∞–ª—å–Ω–∏–π —Ä—É—Ö —É–≥–æ—Ä—É.
        //
        // –£–ú–û–í–ê:
        //   –ö–Ω–æ–ø–∫–∞ —Ä–µ–∞–ª—å–Ω–æ —Å–ø—Ä–∞—Ü—é–≤–∞–ª–∞ (performed).
        //
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –î–∞—î–º–æ –Ω–æ–≤—É —à–≤–∏–¥–∫—ñ—Å—Ç—å –ø–æ Y = jumpForce.
        //   –í–º–∏–∫–∞—î–º–æ —Ç—Ä–∏–≥–µ—Ä –∞–Ω—ñ–º–∞—Ü—ñ—ó.
        //
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –ü–µ—Ä—Å–æ–Ω–∞–∂ –ø–æ—á–∏–Ω–∞—î —Å—Ç—Ä–∏–±–æ–∫.
        private void OnJump(InputAction.CallbackContext ctx)
        {
            if (!ctx.performed) return;
            if (Grounded) return;

            rb.linearVelocity = new Vector2(rb.linearVelocity.x, jumpForce);

            animator.SetTrigger(Hash_ActionTrigger);
            animator.SetInteger(Hash_ActionID, 1);

            UpdateAnimator();
        }


        // –ê–¢–ê–ö–ê (Attack)
        // –ü–†–ò–ß–ò–ù–ê:
        //   –ü–æ—Ç—Ä—ñ–±–Ω–æ —Ä–æ–∑—Ä—ñ–∑–Ω—è—Ç–∏ ¬´–∑–≤–∏—á–∞–π–Ω–∏–π —É–¥–∞—Ä¬ª —ñ ¬´–∫–æ–º–±–æ-—É–¥–∞—Ä¬ª.
        //
        // –£–ú–û–í–ê:
        //   –ü–µ—Ä—à–∏–π –∫–ª—ñ–∫ ‚Üí Attack 1.
        //   –î—Ä—É–≥–∏–π –∫–ª—ñ–∫ –î–û –∑–∞–≤–µ—Ä—à–µ–Ω–Ω—è —Ç–∞–π–º–µ—Ä–∞ ‚Üí Attack 2.
        //
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –ü—ñ–¥–≤–∏—â—É—î–º–æ clickCount,
        //   –∑–∞–ø—É—Å–∫–∞—î–º–æ —Ç–∞–π–º–µ—Ä,
        //   –ø–µ—Ä–µ–º–∏–∫–∞—î–º–æ ActionID.
        //
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –°–∏—Å—Ç–µ–º–∞ –∞–Ω—ñ–º–∞—Ü—ñ–π –∑–Ω–∞—î, —è–∫—É –∞—Ç–∞–∫—É –∑–∞–ø—É—Å–∫–∞—Ç–∏.
        private void Attack(InputAction.CallbackContext ctx)
        {
            if (!ctx.performed) return;

            clickCount = clickCount + 1;

            if (clickCount == 1)
            {
                animator.SetTrigger(Hash_ActionTrigger);
                animator.SetInteger(Hash_ActionID, 9);
                clickTimer = doubleClickTime;
            }
            else if (clickCount == 2)
            {
                animator.SetTrigger(Hash_ActionTrigger);
                animator.SetInteger(Hash_ActionID, 10);
                clickTimer = 0;
                clickCount = 0;
            }
        }

        #endregion
        
        #region ANIMATION HELPERS

        // –û–ù–û–í–õ–ï–ù–ù–Ø –ê–ù–Ü–ú–ê–¢–û–†–ê
        // –ü–†–ò–ß–ò–ù–ê:
        //   Animator –ø–æ–≤–∏–Ω–µ–Ω –∑–Ω–∞—Ç–∏ —à–≤–∏–¥–∫—ñ—Å—Ç—å —ñ —Å—Ç–∞–Ω –∑–µ–º–ª—ñ.
        //
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –ú–æ–∂–Ω–∞ –∫–æ—Ä–µ–∫—Ç–Ω–æ –ø–µ—Ä–µ–º–∏–∫–∞—Ç–∏ –∞–Ω—ñ–º–∞—Ü—ñ—ó Idle ‚Üî Run ‚Üî Jump.
        private void UpdateAnimator()
        {
            animator.SetFloat(Hash_MovementValue, rb.linearVelocity.magnitude);
            animator.SetBool(Hash_Grounded, Grounded);
        }


        // üîµ –ü–û–í–û–†–û–¢ –ü–ï–†–°–û–ù–ê–ñ–ê
        // –ü–†–ò–ß–ò–ù–ê:
        //   –ê–Ω—ñ–º–∞—Ü—ñ—ó –ø–æ–≤–∏–Ω–Ω—ñ –¥–∏–≤–∏—Ç–∏—Å—è —É —Å—Ç–æ—Ä–æ–Ω—É —Ä—É—Ö—É.
        //
        // –ú–ï–•–ê–ù–Ü–ö–ê:
        //   –ü–æ–≤–µ—Ä—Ç–∞—î–º–æ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞ –ø–æ Y –Ω–∞ 0¬∞ –∞–±–æ 180¬∞.
        //
        // –ù–ê–°–õ–Ü–î–û–ö:
        //   –ü–µ—Ä—Å–æ–Ω–∞–∂ –∑–∞–≤–∂–¥–∏ ‚Äú–¥–∏–≤–∏—Ç—å—Å—è‚Äù —É –ø—Ä–∞–≤–∏–ª—å–Ω–∏–π –±—ñ–∫.
        private void UpdateRotation()
        {
            if (lookingToTheRight)
            {
                transform.rotation = Quaternion.Euler(0, 0, 0);
            }
            else
            {
                transform.rotation = Quaternion.Euler(0, 180, 0);
            }
        }

        #endregion
    }
}